language/move-lang/tests/move_check/translated_ir_tests/commands/pop_weird.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/pop_weird.move:13:9 ───
    │
 13 │         (_, _) = ();
    │         ^^^^^^ Invalid list-assignment. The list-assignment expected 2 argument(s) but got 0
    ·
 13 │         (_, _) = ();
    │                  -- Found 0 arguments here
    │

error: 

    ┌── tests/move_check/translated_ir_tests/commands/pop_weird.move:14:9 ───
    │
 14 │         (_) = ();
    │         ^^^ Invalid list-assignment. The list-assignment expected 1 argument(s) but got 0
    ·
 14 │         (_) = ();
    │               -- Found 0 arguments here
    │

